# davinci-control-helper

./: .config  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TAURI_GUI.md  THIRD-PARTY-NOTICES.md  build.bat  index.html  mouse_monitor.cpp  package.json  settings.example.json  settings.json  tailwind.config.cjs  vite.config.mjs  前端界面2.txt  前端界面3.txt  新位置.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
archive/达芬奇辅助控制器/: Davinci control helper v0.2.cpp  Davinci control helper v0.21.cpp  Davinci control helper v0.9.cpp  MouseSensitivityTool_v5_English.cpp  WheelLR.ahk  hello.py  minimal_drag.cpp  minimal_drag.py
archive/达芬奇辅助控制器/失败的python尝试/: build_exe.py  davinci_drag_config.json  davinci_drag_gui.py  davinci_drag_gui_backup.py  davinci_drag_gui_debug.py  davinci_drag_helper.py  emergency_restore.py  find_mouse_id.py  requirements.txt  v1.py  v2.py  v3.py
dual-sens-manager/: DeviceSelectionState.cs  MainForm.cs  Program.cs  RawInputInterop.cs  SettingsService.cs  dual-sens-manager.csproj
dual-sens-manager/Properties/: AssemblyInfo.cs
scripts/: brand.ps1  pack-iexpress.ps1  pack-release.ps1  prepare-portable.mjs
src/: App.jsx  index.css  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/dual-sens-manager/: DeviceSelectionState.cs  LowLevelMouseBlocker.cs  MainForm.cs  Program.cs  RawInputInterop.cs  SettingsService.cs  dual-sens-manager.csproj
wrapper/: input.cpp  input.h  wrapper.cpp  wrapper.vcxproj
x64/: DualSensManager.exe.config
(+67 files in other folders)
