[package]
name = "rawaccel-monitor-gui"
version = "4.0.0"
description = "RawAccel mouse monitor GUI"
authors = ["chixi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

